// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`accepts ref 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: undefined;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    text
  </span>
</div>
`;

exports[`renders 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: undefined;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    text
  </span>
</div>
`;

exports[`renders color 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  color: #ec3331;
  font-weight: undefined;
}

<div
  class="c0"
>
  <span
    class="c1"
  />
</div>
`;

exports[`renders margin 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  margin: 12px;
  font-size: 18px;
  line-height: 24px;
}

.c2 {
  margin: 24px;
  font-size: 18px;
  line-height: 24px;
}

.c3 {
  margin: 48px;
  font-size: 18px;
  line-height: 24px;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
}

.c5 {
  margin-top: 12px;
  margin-bottom: 12px;
  font-size: 18px;
  line-height: 24px;
}

.c6 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 18px;
  line-height: 24px;
}

.c7 {
  margin-bottom: 12px;
  font-size: 18px;
  line-height: 24px;
}

.c8 {
  margin-top: 12px;
  font-size: 18px;
  line-height: 24px;
}

.c9 {
  margin-left: 12px;
  font-size: 18px;
  line-height: 24px;
}

.c10 {
  margin-right: 12px;
  font-size: 18px;
  line-height: 24px;
}

<div
  class="c0"
>
  <span
    class="c1"
  />
  <span
    class="c2"
  />
  <span
    class="c3"
  />
  <span
    class="c4"
  />
  <span
    class="c5"
  />
  <span
    class="c6"
  />
  <span
    class="c7"
  />
  <span
    class="c8"
  />
  <span
    class="c9"
  />
  <span
    class="c10"
  />
</div>
`;

exports[`renders outside grommet wrapper 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
}

<span
  class="c0"
>
  text
</span>
`;

exports[`renders size 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 0.875rem;
  line-height: 1rem;
  font-weight: 400;
}

.c2 {
  font-size: 1rem;
  line-height: 1.25rem;
  font-weight: 400;
}

.c3 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: 400;
}

.c4 {
  font-size: 1.375rem;
  line-height: 1.75rem;
  font-weight: 400;
}

.c5 {
  font-size: 1.5rem;
  line-height: 1.875rem;
  font-weight: 400;
}

.c6 {
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 400;
}

.c7 {
  font-size: 34px;
  line-height: 40px;
  font-weight: undefined;
}

.c8 {
  font-size: 2.625rem;
  line-height: 2.875rem;
  font-weight: 400;
}

.c9 {
  font-size: 3rem;
  line-height: 3rem;
  font-weight: 400;
}

.c10 {
  font-size: 4.5rem;
  line-height: 4.5rem;
  font-weight: 400;
}

<div
  class="c0"
>
  <span
    class="c1"
  />
  <span
    class="c2"
  />
  <span
    class="c3"
  />
  <span
    class="c4"
  />
  <span
    class="c5"
  />
  <span
    class="c6"
  />
  <span
    class="c7"
  />
  <span
    class="c8"
  />
  <span
    class="c9"
  />
  <span
    class="c10"
  />
  <span
    class="c10"
  />
</div>
`;

exports[`renders tag 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: undefined;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
</div>
`;

exports[`renders textAlign 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  text-align: left;
  font-weight: undefined;
}

.c2 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  text-align: center;
  font-weight: undefined;
}

.c3 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  text-align: right;
  font-weight: undefined;
}

.c4 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  text-align: justify;
  font-weight: undefined;
}

<div
  class="c0"
>
  <span
    class="c1"
  />
  <span
    class="c2"
  />
  <span
    class="c3"
  />
  <span
    class="c4"
  />
</div>
`;

exports[`renders tip 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: undefined;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  class="c0"
>
  <span
    aria-label="tooltip"
    class="c1"
  >
    Default Tip
  </span>
</div>
`;

exports[`renders truncate 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: undefined;
}

.c2 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: undefined;
}

<div
  class="c0"
>
  <span
    class="c1"
  >
    a b c d e f g h i j k l m n o p q r s t u v w x y z
  </span>
  <span
    class="c2"
  >
    a b c d e f g h i j k l m n o p q r s t u v w x y z
  </span>
</div>
`;

exports[`renders weight 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: normal;
}

.c2 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: bold;
}

<div
  class="c0"
>
  <span
    class="c1"
  />
  <span
    class="c2"
  />
</div>
`;

exports[`should apply a11yTitle or aria-label 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: undefined;
}

<div
  class="c0"
>
  <span
    aria-label="test"
    class="c1"
  >
     Example
  </span>
  <span
    aria-label="test-2"
    class="c1"
  >
    Example
  </span>
</div>
`;

exports[`should have no accessibility violations 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: undefined;
}

<div
  class="c0"
>
  <span
    aria-label="test"
    class="c1"
  >
     Example
  </span>
</div>
`;
